<resources>
    <string name="app_name">SPP_BSUIR_HCL</string>
    <string name="search">Поиск</string>
    <string name="genre">Жанр</string>
    <string name="add">Добавить</string>
    <string name="name">Название</string>
    <string name="image_link">Ссылка на картинку</string>
    <string name="tags_search">теги, для поиска</string>
    <string name="add_video">Добавить видео</string>
    <string name="add_film">Добавить новый фильм</string>
    <string name="films_and_serials">фильмы/сериалы</string>
    <string name="films">фильмы</string>
    <string name="serials">сериалы</string>
    <string name="film_show">СМОТРЕТЬ</string>
    <string name="name1">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="about">Описание</string>
    <string name="producer">Продюсер</string>
    <string name="actor">Актер</string>
    <string name="success_user_created">Пользователь успешно создан!</string>
    <string name="error_create_user">Заполните первые 3 поля пользователя</string>
    <string name="actor_created">Создание актера</string>
    <string name="producer_created">Создание продюсера</string>
    <string name="actors">Актеры</string>
    <string name="producers">Продюсеры</string>
    <string name="not_empty_values">Все поля обязательны для заполнения!!!</string>
    <string name="video_link">Ссылка на страницу с видео</string>
    <string name="succerr_film_created">Фильм успешно создан</string>
    <string name="description">Описание</string>
</resources>
