<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.UserCreatedActivity">

    <EditText
        android:id="@+id/name1"
        android:hint="@string/name1"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name2"
        android:hint="@string/name2"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name3"
        android:hint="@string/name3"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/about"
        android:hint="@string/about"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>